Fixed small spacing issue

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
 	padding-left: 1.8em;
 	margin-bottom: 1em;
 	background-size: 1.4em;
-	line-height: 1.4em;
+	line-height: 1.5em;
 }
 
 .ss_ticks ul {
@@ -53,5 +53,5 @@
 	padding-left: 1.5em;
 	margin-bottom: 1em;
 	background-size: 1.4em;
-	line-height: 1.4em;
+	line-height: 1.5em;
 }
